@@ -24,7 +24,6 @@ import org.apache.kafka.connect.sink.SinkRecord;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -41,18 +40,18 @@ public class HoistFieldTest {
 
     @Test
     public void schemaless() {
-        xform.configure(Collections.singletonMap("field", "magic"));
+        xform.configure(Map.of("field", "magic"));
 
         final SinkRecord record = new SinkRecord("test", 0, null, 42, null, null, 0);
         final SinkRecord transformedRecord = xform.apply(record);
 
         assertNull(transformedRecord.keySchema());
-        assertEquals(Collections.singletonMap("magic", 42), transformedRecord.key());
+        assertEquals(Map.of("magic", 42), transformedRecord.key());
     }
 
     @Test
     public void withSchema() {
-        xform.configure(Collections.singletonMap("field", "magic"));
+        xform.configure(Map.of("field", "magic"));
 
         final SinkRecord record = new SinkRecord("test", 0, Schema.INT32_SCHEMA, 42, null, null, 0);
         final SinkRecord transformedRecord = xform.apply(record);
@@ -64,7 +63,7 @@ public class HoistFieldTest {
 
     @Test
     public void testSchemalessMapIsMutable() {
-        xform.configure(Collections.singletonMap("field", "magic"));
+        xform.configure(Map.of("field", "magic"));
 
         final SinkRecord record = new SinkRecord("test", 0, null, 420, null, null, 0);
         final SinkRecord transformedRecord = xform.apply(record);
